@@ -84,6 +84,13 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>openjfx</id>
+            <url>https://openjfx.io</url>
+        </repository>
+    </repositories>
+
     <build>
         <resources>
             <resource>
@@ -118,6 +125,9 @@
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
                     <mainClass>Main</mainClass>
+                    <options>
+                        <option>--add-modules=javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
